--- a/pages/index.html
+++ b/pages/index.html
@@ -5,5 +5,6 @@
 //= modules/order-list.html
 
 //= modules/full-page-sauna.html
+//= modules/full-page-sauna-service.html
 
 //= modules/footer.html
