--- a/pages/modules/full-page-sauna.html
+++ b/pages/modules/full-page-sauna.html
@@ -1,4 +1,7 @@
 <div class="full-page">
+    <div class="button-back">
+        <img src="images/svg/back-w.svg">
+    </div>
     <div class="slider">
         <div class="full-page-slide">
             <div><img src="images/slides/slide-1.png"></div>
