--- a/pages/modules/header.html
+++ b/pages/modules/header.html
@@ -12,32 +12,15 @@
     <link href="production/styles.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
 
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+
+
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+
+    <script src="production/scripts.min.js"></script>
+
 </head>
 <body>
     <div class="container">
-        <header>
-            <div class="mobile header">
-                <div class="logo">
-                    <span class="big">НЕКРАСОВСКИЕ БАНИ</span>
-                    <span class="small">место для душевного отдыха</span>
-                </div>
-                <div class="menu">
-                    <div class="menu-btn">
-                        <img src="images/svg/menu.svg">
-                    </div>
-                    <div class="phone-n-time">
-                        <a class="phone" href="tel:8 (495) 706-85-97">8 (495) 706-85-97</a>
-                        <span class="time">круглосуточно</span>
-                    </div>
-                    <a href="#" class="button">
-                        <img src="images/svg/timetable.svg">
-                    </a>
-                </div>
-            </div>
-            <div class="desktop header">
-
-            </div>
-        </header>
