--- a/pages/modules/full-page-sauna.html
+++ b/pages/modules/full-page-sauna.html
@@ -1,25 +1,14 @@
-<div class="full-page">
-    <div class="button-back">
+<div class="full-page" v-if="view_page === 'sauna'">
+    <div class="button-back" v-on:click="viewMainPage">
         <img src="images/svg/back-w.svg">
     </div>
     <div class="slider">
-        <div class="full-page-slide">
+        <div class="full-page-slide sauna-slide">
             <div><img src="images/slides/slide-1.png"></div>
             <div><img src="images/slides/slide-2.png"></div>
             <div><img src="images/slides/slide-3.png"></div>
         </div>
-        <script type="text/javascript">
-            $(document).ready(function(){
-                $('.full-page-slide').slick({
-                    arrows: false,
-                    dots: true,
-                    infinite: true,
-                    speed: 500,
-                    fade: true,
-                    cssEase: 'linear'
-                });
-            });
-        </script>
+
         
         <div class="sauna">
             <div class="header">
