--- a/pages/modules/full-page-sauna-contacts.html
+++ b/pages/modules/full-page-sauna-contacts.html
@@ -1,5 +1,5 @@
-<div class="full-page" v-if="view_page === 'contacts'">
-    <div class="button-back relative" v-on:click="viewMainPage">
+<div class="full-page" ng-if="view_page === 'contacts'">
+    <div class="button-back relative" ng-click="viewMainPage()">
         <img src="images/svg/back-b.svg">
     </div>
     <div class="h1 center padding-top">Как добраться</div>
