--- a/pages/modules/full-page-sauna-menu.html
+++ b/pages/modules/full-page-sauna-menu.html
@@ -1,12 +1,18 @@
-<div class="full-page" v-if="view_page === 'restaran'">
-    <div class="button-back" v-on:click="viewMainPage">
+<div class="full-page" ng-if="view_page === 'restaran'">
+    <div class="button-back" ng-click="viewMainPage()">
         <img src="images/svg/back-w.svg">
     </div>
     <div class="slider">
-        <div class="full-page-slide restaran-menu">
+        <slick class="full-page-slide restaran-menu"
+               variable-width="true"
+               arrows="false"
+               dots="false"
+               slides-to-show="1"
+               infinite="true"
+               speed="500">
             <div><img src="images/slides/slide-3.png"></div>
             <div><img src="images/slides/slide-3.png"></div>
-        </div>
+        </slick>
 
         <div class="sauna one-item">
             <div class="header">
