--- a/pages/modules/header.html
+++ b/pages/modules/header.html
@@ -12,8 +12,6 @@
     <link href="production/styles.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
 
-    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-
 
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
@@ -22,5 +20,5 @@
     <script src="production/scripts.min.js"></script>
 
 </head>
-<body>
+<body ng-app="app-sauna">
     <div class="container">
