--- a/pages/index.html
+++ b/pages/index.html
@@ -6,6 +6,8 @@
         //= modules/seo-text.html
         //= modules/order-list.html
         //= modules/footer-block.html
+
+        //= modules/modal/datepicker.html
     </div>
     <div class="pages" ng-if="view_pages">
         //= modules/full-page-sauna.html
