--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
         <div class="modal">
             <div class="content">
-                <datatime></datatime>
+                <datatime pick-date-controller="pickdate"></datatime>
             </div>
         </div>
     </div>
