--- a/pages/modules/modal/datepicker.html
+++ b/pages/modules/modal/datepicker.html
@@ -1,5 +1,5 @@
 <div class="modal">
     <div class="content">
-        <datatime></datatime>
+        <datatime pick-date-controller="pickdate"></datatime>
     </div>
 </div>
