--- a/pages/modules/full-page-sauna.html
+++ b/pages/modules/full-page-sauna.html
@@ -9,8 +9,7 @@
                dots="true"
                slides-to-show="1"
                infinite="true"
-               speed="500"
-        >
+               speed="500">
             <div><img src="images/slides/slide-1.png"></div>
             <div><img src="images/slides/slide-2.png"></div>
             <div><img src="images/slides/slide-3.png"></div>
