--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <div class="list-item" ng-click="viewPage('sauna')">
                     <div class="item-list-header">Выберите баню <img src="images/svg/arrow-right.svg"></div>
                     <div class="in-order">
-                        <div class="in-orde-item">Баня №1 <span class="price">3 170 руб.</span></div>
+                        <div class="in-orde-item">{{ current_sauna.sauna.name }} <span class="price">{{ current_sauna.sauna.price }} руб.</span></div>
                         <div class="date">14.04.2019 г - 19:00 - 23:00</div>
                     </div>
                 </div>
@@ -71,8 +71,7 @@
                 <div class="list-item" ng-click="viewPage('service')">
                     <div class="item-list-header">Услуги бани <img src="images/svg/arrow-right.svg"></div>
                     <div class="in-order">
-                        <div class="in-orde-item ">Банщик <span class="price">3 170 руб.</span></div>
-                        <div class="in-orde-item ">Массажист <span class="price">2 170 руб.</span></div>
+                        <div class="in-orde-item " ng-repeat="service in order.service">{{ service.id }} <span class="price">{{ service.price }} руб.</span></div>
                     </div>
                 </div>
         
@@ -147,7 +146,7 @@
                     <div class="header">
                         Интерьеры бани
                     </div>
-                    <div class="name">
+                    <div class="name" ng-click="showChooseSauna()">
                         Баня №1
                     </div>
                 </div>
@@ -157,7 +156,7 @@
                         <div class="realprice">1 499 руб./час</div>
                         <div class="row-2">мин. заказ 2 часа</div>
                     </div>
-                    <div class="date">
+                    <div class="date" ng-click="showDatePicker()">
                         <div class="row-1">
                             <img src="images/svg/timetable-b.svg"> 19.04.2019
                         </div>
@@ -170,13 +169,13 @@
                 <div class="order">
                     <div class="control">
                         <div class="buttons">
-                            <div class="btn decrement disabled">-</div>
-                            <div class="result">1</div>
-                            <div class="btn  increment">+</div>
+                            <div class="btn decrement disabled" ng-click="saunaMansCount(-1)">-</div>
+                            <div class="result">{{ order.sauna.guest }}</div>
+                            <div class="btn  increment" ng-click="saunaMansCount(1)">+</div>
                         </div>
                         <p class="dop">кол. человек<br>+ 100 руб.** </p>
                     </div>
-                    <a class="order-btn button">ЗАКАЗАТЬ</a>
+                    <a class="order-btn button" ng-click="buttonOrderSauna()">ЗАКАЗАТЬ</a>
                 </div>
         
                 <div class="in-order">
