--- a/index.html
+++ b/index.html
@@ -9,14 +9,13 @@
     <title>НЕКРАСОВСКИЕ БАНИ</title>
     <meta http-equiv="Cache-Control" content="max-age=3600">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:300,400,700&amp;subset=cyrillic,cyrillic-ext" rel="stylesheet">
-    <link href="production/styles.min.css" rel="stylesheet">
+
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
-
-
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 
+    <link href="production/styles.min.css" rel="stylesheet">
     <script src="production/scripts.min.js"></script>
 
 </head>
@@ -196,7 +195,9 @@
             <div class="content">
                 <div class="select-list-sauna">
                     <div class="header">Выберите баню</div>
-                    <div class="close" ng-click="closeChooseSauna()"><img src="images/svg/close.svg"></div>
+                    <div class="close" ng-click="closeChooseSauna()">
+                        <img src="images/svg/close.svg">
+                    </div>
         
                     <div class="option {{sauna.choose?'active':'gray'}}" ng-repeat="sauna in sauna_list" ng-click="chooseSauna(sauna)">
                         <div class="name">
@@ -213,7 +214,7 @@
         
         <div class="modal {{ booleanChooseDATE?'active':'closed' }}" >
             <div class="content">
-                <datatime pick-date-controller="pickdate" close-date-modal="closemodal" min-order-hours="sauna_choose.min_h" today-free-sapce=""></datatime>
+                <datatime sauna-id="sauna.choose.id" pick-date-controller="pickdate" close-date-modal="closemodal" min-order-hours="sauna_choose.min_h"></datatime>
             </div>
         </div>
         <div class="full-page" ng-if="view_page === 'service'">
